--- a/keyword-parser/package.json
+++ b/keyword-parser/package.json
@@ -1,25 +1,37 @@
 {
   "name": "keyword-parser",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "Keyword search service",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand --forceExit",
     "start": "node src/app.js"
   },
-  "author": "",
+  "author": "Demian Ortiz <demian.ortiz@grey.com> (https://www.videocaster.com.ar)",
   "license": "ISC",
   "dependencies": {
-    "appdynamics": "^20.6.0",
+    "body-parser": "^1.19.0",
     "cloudant": "^1.10.0",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http": "0.0.0",
-    "self-reload-json": "^0.4.0",
     "winston": "^2.4.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "node"
+    ],
+    "testMatch": [
+      "**/*.test.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testEnvironment": "node"
   }
 }
